# imgui_wrap

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh
.github/workflows/: workflow-mac.yml  workflow.yml
cmake/: build_config.cmake  common.cmake  file_embed.cmake  git_submodule.cmake  gui_executable.cmake
examples/: CMakeLists.txt
examples/hello_gl/: CMakeLists.txt  hello_gl.cpp
examples/hello_gui/: CMakeLists.txt  hello_gui.cpp  hello_gui_tests.cpp
examples/hello_plot/: CMakeLists.txt  hello_plot.cpp
examples/hello_shader/: CMakeLists.txt  hello_shader.cpp
examples/hello_sizer/: CMakeLists.txt  hello_sizer.cpp
examples/test_app/: CMakeLists.txt
include/gl/: Circle.hpp  FrameBuffer.hpp  Program.hpp  Shader.hpp  Shape.hpp  Sphere.hpp  gl.h
include/gui/: Application.hpp  Backend_GLFW_GL3.hpp  Backend_Null.hpp  ChildFrame.hpp  Frame.hpp  HorizontalSizer.hpp  Rect.hpp  Sizer.hpp  StackingSizer.hpp  TestManager.hpp  Types.hpp  VerticalSizer.hpp  Widget.hpp  Window.hpp  gui.hpp  imgui_stdlib.hpp
include/gui/gl/: FrameBuffer.hpp
include/math/: Vec2.hpp
include/timer/: Timer.hpp
patches/: apply_patches.sh  glfw_apple_renderer.patch
src/: Application.cpp  Backend.cpp  Backend_GLFW_GL3.cpp  Backend_Null.cpp  CMakeLists.txt  ChildFrame.cpp  Frame.cpp  HorizontalSizer.cpp  Sizer.cpp  StackingSizer.cpp  VerticalSizer.cpp  Widget.cpp  Window.cpp  imgui_stdlib.cpp
src/gl/: CMakeLists.txt  Circle.cpp  FrameBuffer.cpp  Program.cpp  Shader.cpp  Shape.cpp  Sphere.cpp
src/gui/: Application.cpp  CMakeLists.txt  ChildFrame.cpp  VerticalSizer.cpp  Widget.cpp  Window.cpp  imgui_stdlib.cpp
src/gui/impl/: Backend.cpp  Backend.hpp  Backend_GLFW_GL3.cpp  Backend_Null.hpp  TestReporter.cpp  util.cpp  util.hpp
src/impl/: Backend_GLFW_GL3.cpp  Backend_GLFW_GL3.hpp  Backend_Null.cpp  TestReporter.cpp  TestReporter.hpp  util.cpp  util.hpp
src/math/: CMakeLists.txt
src/timer/: CMakeLists.txt  Timer.cpp  TimerCpp_Impl.hpp  TimerInternal_Impl.hpp
